# HyperCoast

./: .all-contributorsrc  .gitignore  .mergify.yml  .pre-commit-config.yaml  404.html  CITATION.cff  LICENSE  README.md  REUSE.toml  index.html  index.md  mkdocs.yml  objects.inv  pyproject-codespell.precommit-toml  pyproject.toml  requirements.txt  requirements_dev.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: cla.yml  docs-build.yml  docs.yml  draft-pdf.yml  installation.yml  macos.yml  publish.yml  pypi.yml  qgis-plugin.yml  test-earthdata.yml  ubuntu.yml  windows.yml
appeears/: index.html
aviris/: index.html
catalog/: index.html
cesl/: index.html
changelog/: changelog.md  index.html
changelog_update/: changelog_update.py  index.html
chla/: index.html
cla/: cla.md  index.html
cli/: index.html
cloud/: index.html
common/: index.html
contributing/: contributing.md  index.html
desis/: index.html
docs/: CNAME  appeears.md  aviris.md  catalog.md  cesl.md  changelog.md  chla.md  cla.md  cli.md  cloud.md  common.md  contributing.md  desis.md  enmap.md  hypercoast.md  index.md  installation.md  ml.md  pace.md  prisma.md  qgis_plugin.md  recipes.md  registry.md  spectral.md  summary.md  tanager.md  usage.md  workflows.md
docs/emit_utils/: data_loading.md  model_inference.md  moe_vae.md  plot_and_save.md  preprocess.md
docs/examples/: EMIT_TSS.ipynb  EMIT_aCDOM.ipynb  EMIT_chla.ipynb  _earthaccess.ipynb  acolite.ipynb  appeears_emit_area.ipynb  appeears_emit_point.ipynb  aviris.ipynb  aviris_streaming.ipynb  cesl.ipynb  chla_predict.ipynb  chlorophyll_a.ipynb  chorophyll_a.ipynb  desis.ipynb  ecostress.ipynb  emit.ipynb  enmap.ipynb  field_data.ipynb  hypoxia.ipynb  image_cube.ipynb  image_slicing.ipynb  intro.ipynb  moe_vae.ipynb  moe_vae_acdom.ipynb  moe_vae_chla.ipynb  moe_vae_tss.ipynb  multispectral.ipynb  neon.ipynb  overview.md  ovewview.md  pace.ipynb  pace_cyano.ipynb  pace_oci_l1.ipynb  pace_oci_l2.ipynb  prisma.ipynb  qgis_workflow_processing.ipynb  registry_workflows.ipynb  search_data.ipynb  search_workspace.ipynb  spectral_cloud_tools.ipynb  (+5 more)
docs/moe_vae/: data_loading.md  model.md  model_inference.md  plot_and_save.md
docs/workshops/: emit.ipynb  pace.ipynb
emit/: emit.md  index.html
emit_utils/data_loading/: index.html
emit_utils/model_inference/: index.html
emit_utils/moe_vae/: index.html
emit_utils/plot_and_save/: index.html
emit_utils/preprocess/: index.html
enmap/: index.html
examples/EMIT_TSS/: EMIT_TSS.ipynb  index.html
examples/EMIT_aCDOM/: EMIT_aCDOM.ipynb  index.html
examples/EMIT_chla/: index.html
examples/Sentinel2MSI-chla/: index.html
examples/_earthaccess/: index.html
examples/acolite/: index.html
examples/acolite_emit/: acolite_emit.ipynb  index.html
examples/appeears_emit_area/: index.html
examples/appeears_emit_point/: index.html
examples/aviris/: aviris.ipynb  index.html
examples/cesl/: index.html
examples/chla_predict/: index.html
examples/chlorophyll_a/: index.html
examples/dataset_summary_cli/: dataset_summary_cli.ipynb  index.html
examples/desis/: index.html
examples/ecostress/: index.html
examples/emit/: emit.ipynb  index.html
examples/enmap/: index.html
examples/field_data/: field_data.ipynb  index.html
faq/: index.html
hypercoast/: __init__.py  appeears.py  aviris.py  catalog.py  cesl.py  chla.py  cli.py  cloud.py  common.py  desis.py  emit.py  enmap.py  hypercoast.py  index.html  ml.py  neon.py  pace.py  prisma.py  registry.py  spectral.py  summary.py  tanager.py  ui.py  workflows.py  wyvern.py
installation/: index.html
ml/: index.html
neon/: index.html  neon.md
pace/: index.html
paper/: paper.bib  paper.md
prisma/: index.html
qgis_plugin/: README.md  index.html  install_plugin.py  install_plugin.sh  package_plugin.py
recipes/: index.html
registry/: index.html
search/: search_index.json
spectral/: index.html
summary/: index.html
tanager/: index.html
tests/: __init__.py  test_appeears.py  test_aviris.py  test_aviris_streaming.py  test_catalog_cloud.py  test_cesl.py  test_cli_registry.py  test_download.py  test_emit.py  test_hypercoast.py  test_ml.py  test_neon.py  test_pace.py  test_spectral.py  test_summary.py  test_tanager.py  test_workflows.py
ui/: index.html  ui.md
usage/: index.html
workflows/: index.html
(+111 files in other folders)
