[project]
name = "HyperCoast"
version = "0.26.0"
dynamic = [
    "dependencies",
]
description = "A Python package for processing hyperspectral data in coastal regions"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "HyperCoast",
]
license = "MIT"
authors = [
  {name = "Qiusheng Wu", email = "giswqs@gmail.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.entry-points."console_scripts"]
hypercoast = "hypercoast.cli:main"

[project.optional-dependencies]
all = [
    "HyperCoast[cloud]",
    "HyperCoast[docs]",
    "HyperCoast[ml]",
    "HyperCoast[qgis]",
    "HyperCoast[viz]",
]

core = [
    "h5netcdf",
    "h5py",
    "netcdf4",
    "numpy",
    "pandas",
    "requests",
    "scipy",
    "xarray",
]

viz = [
    "cartopy",
    "geopandas",
    "hvplot",
    "leafmap>=0.62.0",
    "localtileserver",
    "mapclassify",
    "openpyxl",
    "pyvista[jupyter]",
    "rioxarray",
    "scikit-learn",
    "seaborn",
]

cloud = [
    "dask",
    "earthaccess",
    "s3fs",
]

qgis = [
    "HyperCoast[core]",
    "PyQt6",
    "PyQt6-QScintilla",
    "rasterio",
]

ml = ["torch", "seaborn", "pytorch-lightning"]

docs = [
    "mkdocs",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-git-revision-date-plugin",
    "mkdocs-jupyter>=0.26.3",
    "mkdocs-material>=9.1.3",
    "mkdocstrings",
    "mkdocstrings-python-legacy",
    "pymdown-extensions",
]

extra = [
    "HyperCoast[viz]",
]

torch = ["HyperCoast[ml]"]

[tool]
[tool.setuptools.packages.find]
include = ["hypercoast*"]
exclude = ["docs*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.bumpversion]
current_version = "0.26.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "hypercoast/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


[tool.flake8]
exclude = [
    "docs",
]
max-line-length = 88

[tool.ruff]
line-length = 88
exclude = ["docs", "site", "dist"]

[tool.ruff.lint]
select = ["I"]


[project.urls]
Homepage = "https://github.com/opengeos/HyperCoast"

[build-system]
requires = ["setuptools>=77", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
